# huace-alpha

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: publish-snapshot.yml
.streamlit/: config.toml
docs/superpowers/specs/: 2026-06-12-a-share-wave-recommender-design.md  2026-06-13-win-rate-and-commercial-ui-design.md  2026-07-01-3000-stock-expansion-design.md  2026-07-01-all-listed-a-shares-design.md  2026-07-01-public-cloud-deployment-design.md
scripts/: build_snapshot.py
src/a_share_recommender/: backtest.py  config.py  data_providers.py  evaluator.py  features.py  modeling.py  pipeline.py  recommend.py  sample_data.py  scoring.py  snapshot.py  ui.py
tests/: test_pipeline.py
